updated .env and gitignore

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "name": "facebook-monitor",
   "version": "1.0.0",
-  "main": "facebook-monitor.js",
+  "main": "src/facebook-monitor.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
