--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
+    "fs": "^0.0.1-security",
     "gitignore": "^0.7.0",
     "node-schedule": "^2.1.1",
     "puppeteer": "^22.4.1"
