--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "version": "1.0.0",
   "main": "src/facebook-monitor.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/facebook-monitor.js"
   },
   "author": "",
   "license": "ISC",
